<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Examples</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="left">Left</string>
    <string name="up">Up</string>
    <string name="right">Right</string>
    <string name="down">Down</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="title_activity_sub">sub</string>
    <string name="title_activity_example_lists">ExampleLists</string>
    <string name="title_activity_egetting_start">EGettingStart</string>
    <string name="title_activity_econfig">EConfig</string>
    <string name="title_activity_etrans_and_hier">ETransformation And Hierarchy</string>
    <string name="title_activity_eanimator">EAnimator</string>
    <string name="title_activity_edraw2_d">EDraw2D</string>
    <string name="title_activity_ecamera">ECamera</string>
    <string name="title_activity_ebitmap">EBitmap</string>
    <string name="title_activity_elighting">ELighting</string>
    <string name="title_activity_ecollision">ECollision</string>
    <string name="title_activity_emedia_player">EMediaPlayer</string>
    <string name="title_activity_ebillboard">EBillboard</string>
    <string name="title_activity_eparticle_system">EParticleSystem</string>
    <string name="title_activity_ecubelayout">ECubelayout</string>
    <string name="title_activity_ememory">EMemory</string>
    <string name="title_activity_ematerial">EMaterial</string>
    <string name="title_activity_enode_mgr">ENodeMgr</string>
    <string name="title_activity_ebounding_box">EBoundingBox</string>
    <string name="title_activity_enative">ENative</string>
    <string name="title_activity_eps_extension">EPSExtension</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_ecamerawwicth">Swicth Camera</string>
    <string name="title_activity_eskydome">Sky Dome</string>
    <string name="title_activity_eanimate_mesh">EAnimate</string>

</resources>
